feat: Implement UI enhancements and i18n updates across the application
This commit introduces several UI improvements and expands internationalization support:

- **Updated Card Component:** Added new variants for  and  to  for better visual distinction of specific card types.
- **Theme System Enhancements:** Modified  to include new color variables for , , , , , , and  to support the new card variants and improve theme consistency.
- **Internationalization Updates:**
  - Added  key to  in  and .
  - Updated  and  to use dynamic filter names.
  - Added  and  for filter translations.
  - Added  for tasks without an associated goal.
- **Page-specific UI Adjustments:**
  - : Adjusted fixed top bar and action bar styling, and updated  message to use dynamic filter.
  - : Adjusted fixed top bar and action bar styling, and updated  message.
  - : Adjusted fixed top bar and action bar styling, and updated  message to use dynamic filter.
- **Dashboard Component Styling:**
  - : Updated  to use a theme variable.
  - : Updated card background and border colors to use theme variables.
  - : Applied  variant to  component.
  - : Applied  variant to  component.

These changes aim to enhance the visual appeal, improve user experience, and ensure broader language support across the application.

--- a/frontend/src/locales/en-new.json
+++ b/frontend/src/locales/en-new.json
@@ -194,6 +194,7 @@
     },
     "tasks": {
       "title": "Tasks",
+      "dailyTasks": "Daily Task",
       "subtitle": "Set your tasks for today before your morning deadline",
       "empty": "No tasks for today. What can you do to make progress?",
       "createNew": "+ New Task"
