--- a/frontend/src/locales/zh-new.json
+++ b/frontend/src/locales/zh-new.json
@@ -194,6 +194,7 @@
     },
     "tasks": {
       "title": "任务",
+      "dailyTasks": "每日任务",
       "subtitle": "在早晨截止时间前设定今天的任务",
       "empty": "今天没有任务。您能做些什么来取得进展？",
       "createNew": "+ 新建任务"
