--- a/frontend/src/locales/en-new.json
+++ b/frontend/src/locales/en-new.json
@@ -214,14 +214,23 @@
       "title": "Goals",
       "subtitle": "Manage your long-term goals for each life category",
       "empty": "No goals found. Create your first goal!",
-      "createNew": "+ New Goal"
+      "createNew": "+ New Goal",
+      "filters": {
+        "active": "Active",
+        "completed": "Complete",
+        "all": "All"
+      }
     },
     "tasks": {
       "title": "Tasks",
       "dailyTasks": "Daily Task",
       "subtitle": "Set your tasks for today before your morning deadline",
       "empty": "No tasks for today. What can you do to make progress?",
-      "createNew": "+ New Task"
+      "createNew": "+ New Task",
+      "filters": {
+        "today": "Today",
+        "all": "All"
+      }
     },
     "progress": {
       "title": "Progress",
