--- a/frontend/src/locales/zh-new.json
+++ b/frontend/src/locales/zh-new.json
@@ -214,14 +214,23 @@
       "title": "目标",
       "subtitle": "管理每个生活类别的长期目标",
       "empty": "没有找到目标。创建您的第一个目标！",
-      "createNew": "+ 新建目标"
+      "createNew": "+ 新建目标",
+      "filters": {
+        "active": "活跃",
+        "completed": "已完成",
+        "all": "全部"
+      }
     },
     "tasks": {
       "title": "任务",
       "dailyTasks": "每日任务",
       "subtitle": "在早晨截止时间前设定今天的任务",
       "empty": "今天没有任务。您能做些什么来取得进展？",
-      "createNew": "+ 新建任务"
+      "createNew": "+ 新建任务",
+      "filters": {
+        "today": "今天",
+        "all": "全部"
+      }
     },
     "progress": {
       "title": "进度",
