feat(locales): add localization strings for feedback, progress, and profile

--- a/frontend/src/locales/zh-new.json
+++ b/frontend/src/locales/zh-new.json
@@ -415,5 +415,26 @@
     "title": "确认删除 {{item}}",
     "message": "您确定要删除这个{{item}}吗？此操作无法撤销。",
     "warning": "此操作是永久性的。"
+  },
+  "feedback": {
+    "info": {
+      "noGoalsFound": "没有找到符合当前筛选条件的目标。",
+      "loadingDashboard": "正在加载仪表盘数据，请稍候..."
+    },
+    "error": {
+      "invalidDate": "请选择一个有效的未来日期。"
+    }
+  },
+  "progressPage": {
+    "stats": {
+      "totalGoals": "目标总数",
+      "completedGoals": "已完成目标",
+      "inProgressGoals": "进行中目标",
+      "avgTaskCompletion": "平均任务完成率"
+    }
+  },
+  "profile": {
+    "anonymous": "匿名",
+    "no_email": "未提供邮箱"
   }
 }
