--- a/frontend/src/locales/en-new.json
+++ b/frontend/src/locales/en-new.json
@@ -415,5 +415,26 @@
     "title": "Confirm Deletion of {{item}}",
     "message": "Are you sure you want to delete this {{item}}? This action cannot be undone.",
     "warning": "This action is permanent."
+  },
+  "feedback": {
+    "info": {
+      "noGoalsFound": "No goals found matching your current filters.",
+      "loadingDashboard": "Loading dashboard data, please wait..."
+    },
+    "error": {
+      "invalidDate": "Please select a valid date in the future."
+    }
+  },
+  "progressPage": {
+    "stats": {
+      "totalGoals": "Total Goals",
+      "completedGoals": "Completed Goals",
+      "inProgressGoals": "In Progress Goals",
+      "avgTaskCompletion": "Average Task Completion"
+    }
+  },
+  "profile": {
+    "anonymous": "Anonymous",
+    "no_email": "No email provided"
   }
 }
