refactor(ui): update auth page layout, theme system, and dev config
- Refactor AuthPage component to use Card layout for better structure
- Introduce new --surface CSS variable and bg-surface utility class
- Update language toggle to handle unauthenticated states gracefully
- Preserve pre-login language preference in auth service
- Adjust header subtitle rendering for auth variant
- Update Vite dev server to port 4100 and enable strict hosting
- Modify CORS origins to include new dev port
- Update locale strings for sign-in title
- Replace bg-background with bg-surface in multiple pages for consistency
- Update README with new ports, environment files, and setup instructions

BREAKING CHANGE: Vite dev server now runs on port 4100 instead of 5173; update any local references accordingly.

--- a/frontend/src/locales/en-new.json
+++ b/frontend/src/locales/en-new.json
@@ -194,7 +194,7 @@
     "auth": {
       "title": "LIFE ORGANIZATION SYSTEM",
       "subtitle": "Organize your life, achieve your goals",
-      "signInTitle": "Log In",
+      "signInTitle": "Welcome Back",
       "signUpTitle": "Create Account",
       "forgotPassword": "Forgot Password?",
       "alreadyHaveAccount": "Already have an account?",
